--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -35,12 +35,15 @@
       <div class="col-lg-4">
         <h3 class="
         mb-4">Contact us</h3>
+        <!--
         <form action="{{ site.Params.contact.formAction }}" method="POST">
           <input type="text" class="form-control mb-2" id="name" name="name" placeholder="Your Name">
           <input type="email" class="form-control mb-2" id="email" name="email" placeholder="Your Email">
           <textarea name="message" id="message" class="form-control mb-2" placeholder="Your Message"></textarea>
           <button type="submit" value="send" class="btn btn-block btn-outline-primary rounded">Send Now</button>
         </form>
+-->
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeiVd7xiPLHfSLwq0oqFSnx5dy3Wv0csJC1yq79iNQYU40TSw/viewform?embedded=true" width="640" height="943" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </div>
   </div>
